<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">


    <!--<LinearLayout-->
        <!--android:id="@+id/ll_choise"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content">-->
            <!--<CheckBox-->
                <!--android:id="@+id/close_up"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="关闭UP回复"/>-->
            <!--<CheckBox-->
                <!--android:id="@+id/close_mr"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="关闭MR回复"/>-->
        <!--</LinearLayout>-->
        <!--<Button-->
            <!--android:id="@+id/btn_connet"-->
            <!--android:layout_width="@dimen/btn_w"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/connect"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_imei"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:hint="@string/imei"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:id="@+id/auto_view"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/ll_command"
    android:layout_below="@id/ll_imei"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_comm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_comm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/comm_ascii"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_comm_hex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_comm_hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/comm_hex"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_edit_comm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_command"/>
        <Button
            android:id="@+id/btn_disconnet"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/dicconnect"/>
        <Button
            android:id="@+id/btn_connet"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/connect"/>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/send"/>
    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:id="@+id/ll_data"
    android:layout_below="@id/ll_command"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="数据接收:"/>
        <CheckBox
            android:id="@+id/stop_data_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="数据暂停显示"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/clear"/>

</LinearLayout>
<TextView
    android:id="@+id/tv_receive"
    android:layout_marginTop="10dp"
    android:layout_below="@id/ll_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:padding="5dp"
    android:fadeScrollbars="false"
    android:background="@drawable/shape_text_receive"/>
</RelativeLayout>
